# xdn

./: .gitignore  AGENTS.md  CLAUDE.md  MEMORY.md  README.md  build.xml
aws/: README.md  ami_common.sh  ar-userdata.tftpl  cluster_power.sh  create_ar_ami.sh  create_rc_ami.sh  last-built-amis.txt  main.tf  rc-userdata.tftpl
cloudlab/: .gitignore  README.md  requirements.txt
conf/: dynamo.properties  gigapaxos.cloudlab-virtual-13nodes.properties  gigapaxos.cloudlab-virtual.properties  gigapaxos.cloudlab.properties  gigapaxos.local.6.reconfiguration.properties  gigapaxos.local.properties  gigapaxos.local.reconfiguration.properties  gigapaxos.properties  gigapaxos.xdn.3way.cloudlab.no2.properties  gigapaxos.xdn.3way.cloudlab.properties  gigapaxos.xdn.3way.properties  gigapaxos.xdn.5way.cloudlab.properties  gigapaxos.xdn.5way.numeric.cloudlab.properties  gigapaxos.xdn.cloudlab.6.reconfiguration.properties  gigapaxos.xdn.cloudlab.local.10nodes.properties  gigapaxos.xdn.cloudlab.local.13nodes.properties  gigapaxos.xdn.cluster-launch.cloudlab.properties  gigapaxos.xdn.local.geodemand.properties  (+7 more)
services/todo-rs/: Cargo.toml  xdn-service-causal.yaml  xdn-service-eventual.yaml  xdn-service-linearizable.yaml  xdn-service-mr.yaml  xdn-service-mw.yaml  xdn-service-pram.yaml  xdn-service-ryw.yaml  xdn-service-sequential.yaml
services/todo-rs/src/: main.rs
services/webkv/: Cargo.toml  Dockerfile  README.md  compose.yml
services/webkv/src/: db.rs  main.rs
xdn-fs/rust/fuselog_core/: Cargo.toml
xdn-fs/rust/fuselog_core/src/: lib.rs  main.rs  socket.rs  statediff.rs
(+1309 files in other folders)
