[package]
name = "webkv"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
rusqlite = "0.34.0"
rocksdb = "0.23.0"
tempfile = "3.12.0"
tikv-client = { version = "0.3.0" }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
