[package]
name = "fuselog_core"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
daemonize = "0.5.0"
env_logger = "0.11.8"
fuser = "0.15.1"
libc = "0.2.172"
log = "0.4.27"
once_cell = "1.21.3"
serde = {version = "1.0.219", features = ["derive"]}
uds = "0.4.2"
zstd = { version = "0.13.3", features = ["zdict_builder"] }
